@@ -3,6 +3,7 @@
 package edu.colorado.phet.acidbasesolutions.controls;
 
 import java.awt.BorderLayout;
+import java.awt.Insets;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseAdapter;
@@ -16,6 +17,7 @@ import edu.colorado.phet.acidbasesolutions.constants.ABSImages;
 import edu.colorado.phet.acidbasesolutions.constants.ABSStrings;
 import edu.colorado.phet.acidbasesolutions.model.ABSModel;
 import edu.colorado.phet.acidbasesolutions.model.SolutionRepresentation.SolutionRepresentationChangeAdapter;
+import edu.colorado.phet.common.phetcommon.view.HorizontalLayoutPanel;
 import edu.colorado.phet.common.phetcommon.view.util.EasyGridBagLayout;
 
 /**
@@ -118,19 +120,31 @@ public class TestControls extends JPanel {
         
         // layout
         {
+            final int labelIcponSpacing = 5;
+            
+            HorizontalLayoutPanel pHMeterPanel = new HorizontalLayoutPanel();
+            pHMeterPanel.setInsets( new Insets( 0, labelIcponSpacing, 0, 0 ) );
+            pHMeterPanel.add( pHMeterRadioButton );
+            pHMeterPanel.add( pHMeterIcon );
+            
+            HorizontalLayoutPanel pHPaperPanel = new HorizontalLayoutPanel();
+            pHPaperPanel.setInsets( new Insets( 0, labelIcponSpacing, 0, 0 ) );
+            pHPaperPanel.add( pHPaperRadioButton );
+            pHPaperPanel.add( pHPaperIcon );
+            
+            HorizontalLayoutPanel conductivityTesterPanel = new HorizontalLayoutPanel();
+            conductivityTesterPanel.setInsets( new Insets( 0, labelIcponSpacing, 0, 0 ) );
+            conductivityTesterPanel.add( conductivityTesterRadioButton );
+            conductivityTesterPanel.add( conductivityTesterIcon );
+            
             JPanel innerPanel = new JPanel();
             EasyGridBagLayout layout = new EasyGridBagLayout( innerPanel );
             innerPanel.setLayout( layout );
             int row = 0;
             int column = 0;
-            layout.addComponent( pHMeterRadioButton, row, column++ );
-            layout.addComponent( pHMeterIcon, row++, column );
-            column = 0;
-            layout.addComponent( pHPaperRadioButton, row, column++ );
-            layout.addComponent( pHPaperIcon, row++, column );
-            column = 0;
-            layout.addComponent( conductivityTesterRadioButton, row, column++ );
-            layout.addComponent( conductivityTesterIcon, row++, column );
+            layout.addComponent( pHMeterPanel, row++, column );
+            layout.addComponent( pHPaperPanel, row++, column );
+            layout.addComponent( conductivityTesterPanel, row++, column );
             
             // ensure left justification
             this.setLayout( new BorderLayout() );
