@@ -1,3 +1,4 @@
+8/19/10 position radio button icons close to their associated labels
 # 0.00.22 (43306) Aug 19, 2010
 8/19/10 fiddle with horizontal spacing between bars so that they are close to being aligned with terms in reaction equations
 8/19/10 center 3 bars in concentration graph
